--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   modal_bottom_sheet: ^2.0.1
   json_annotation: ^4.6.0
   dio: ^4.0.6
-  internet_connection_checker: ^0.0.1+3
   hydrated_bloc: ^8.0.0
   path_provider: ^2.0.11
+  connectivity_plus: ^2.3.2
 
 dev_dependencies:
   flutter_test:
